2004-07-20  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* docs/random/ds/0.9-suggested-changes:
	  Make note about renaming fixed-list to array.
	* gst/gstvalue.c: (gst_value_intersect_fixed_list),
	(_gst_value_initialize):
	  Add array intersections.
	* testsuite/caps/intersect2.c: (main):
	  Add test for array intersections.

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to cvs

=== release 0.8.4 ===

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.8.4, "Paella"
	  bump libtool versioning

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/ca.po:
	  adding Catalan translation (Jordi Mallach)

2004-07-20  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/147894-2.c: (queue_empty), (queue_filled),
	(handoff_identity), (main):
	* testsuite/schedulers/147894.c: (queue_empty), (queue_filled),
	(handoff_identity), (main):
	* testsuite/schedulers/Makefile.am:
	Added failing testcase for variant of #147894

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: David Moore

	* gst/schedulers/gstoptimalscheduler.c: (group_has_element),
	(schedule_group), (gst_opt_scheduler_schedule_run_queue),
	(group_migrate_connected):
	* testsuite/schedulers/Makefile.am:
	  fix for #142813 (Deadlock in optimal scheduler)

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Wim Taymans

	* gst/schedulers/gstoptimalscheduler.c: (group_has_element),
	(gst_opt_scheduler_schedule_run_queue),
	(gst_opt_scheduler_get_wrapper), (get_group),
	(group_migrate_connected):
	* testsuite/schedulers/Makefile.am:
	  fix for #147819 (Add some checks in the opt scheduler)

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Benjamin Otte

	* gst/gstelementfactory.c: (__gst_element_details_set):
	  fix for #147929: running gst-register in non-utf8 locale can cause
	  invalid registry
